[package]
name = "v2-seiuni"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

exclude = [
    "/artifacts",
    "contract.wasm",
    "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.2.1"
cosmwasm-storage = "1.2.1"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
protobuf = { version = "3.2.0", features = ["with-bytes"] }
schemars = "0.8.11"
sei-cosmwasm = "0.4.9"
serde = "1.0.152"
thiserror = "1.0.38"

[dev-dependencies]
cosmwasm-schema = "1.2.1"
cw-multi-test = "0.16.2"
sei-integration-tests = "0.4.9"

